@@ -1,3 +1,11 @@
+2004-06-07  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tkTextDisp.c: 
+	* generic/tkTextBTree.c: fix to (Bug 965186) in which the text
+	widget's record of partial-line-height calculations (for very
+	long wrapped lines) was being incorrectly reused.  This resulted
+	in confusing scrollbar-text interactions.
+
 2004-06-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tests/frame.test:     Fix frame-2.8 for ![info exists env(DISPLAY)]
